# ai-competency-profiler

./: LICENSE  README.md  docker-compose.yml  ml_system_design_doc.md
adapter/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_main.py
adapter/api/: routes.py
adapter/competency/: client.py  schemas.py
adapter/core/: config.py  logging.py
adapter/db/: database.py  repository.py
adapter/lms/: client.py  schemas.py
adapter/pipeline/: converter.py  external_tasks.py  poller.py
backend/: .coverage  .dockerignore  .env.example  .gitignore  DATABASE_MODELS.md  Dockerfile  README.md  alembic.ini  concept.md  config.py  docker-compose.yml  llm_service.py  main.py  mock_data.json  mock_data.py  mock_main.py  pyproject.toml  requirements.txt  schemas.py
backend/.github/workflows/: ci.yml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_vacancy_graph_nodes_and_suggestions.py  0003_auth_users_and_refresh_tokens.py  0004_mvp_hardening_and_reliability.py  0005_seed_test_competency_ontology.py  0006_unify_test_result_llm_feedback.py  0007_add_sub_competency_weight.py  30f750f0c508_initial.py  3f2a6d9c1b4e_add_ranking_demo_seed_data.py  7757e8b66da7_add_initial_graph.py  9a7b1f3c4d5e_add_deleted_at_to_vacancies.py  c2f4a1b8e6d9_add_deleted_at_to_candidates.py  dbf5d903c225_initial.py  e1c0f6a2d8b1_replace_task_mapping_with_task_graph.py
backend/database/: init.sh  init.sql
backend/deploy/: deploy.sh
backend/deploy/blue/: docker-compose.yml
backend/deploy/green/: docker-compose.yml
backend/deploy/nginx/: nginx.conf  upstream.conf
backend/deploy/shared/: docker-compose.yml
backend/src/competency_system/application/: code_assessment_policy.py  competency_graph_builder.py  errors.py  id_mapper.py  llm_dispatch.py  llm_orchestrator.py  pipeline.py  prompts.py
backend/src/competency_system/application/dtos/: __init__.py  auth.py  base.py  candidate.py  competency.py  external_system.py  mappers.py  pagination.py  ranking.py  task.py  vacancy.py  webhooks.py
backend/src/competency_system/application/llm/: llm_dispatch.py  llm_dispatch_payload.py  pipeline.py  prompts.py
backend/src/competency_system/application/ports/: __init__.py  competency_extractor.py  external_testing_system.py  health.py  llm.py  llm_gateway.py  llm_jobs.py  ranking.py  repositories.py  uow.py
backend/src/competency_system/application/use_cases/: __init__.py  auth.py  candidate.py  code_assessment_policy.py  graph_builder.py  health.py  llm_orchestrator.py  ontology.py  ranking.py  task.py  (+3 more)
backend/src/competency_system/domain/: __init__.py
backend/src/competency_system/infrastructure/: bootstrap.py  database.py  logging.py  security.py  settings.py
backend/tests/: .env.test.example  config.py  conftest.py  test_airflow_dags.py  test_api_routes_contract.py  test_auth.py  test_candidates.py  test_domain_db_alignment.py  test_health.py  test_health_use_case.py  test_llm_gateway.py  test_orm_relationships.py  test_ranking.py  test_tasks.py  test_uow.py  test_webhook_security.py
backend/tests/contract/: conftest.py  test_airflow_dags.py  test_api_routes_contract.py  test_domain_db_alignment.py  test_orm_relationships.py  test_webhook_security.py
backend/tests/factories/: __init__.py  domain.py  dto.py  factory.py
backend/tests/fixtures/: __init__.py  domain_graph.py
backend/tests/integration/: conftest.py
backend/tests/integration/repositories/: helpers.py  test_candidate_repository.py  test_category_repository.py  test_competency_repository.py  test_ranking_snapshot_repository.py  test_refresh_token_repository.py  test_subcompetency_repository.py  test_task_repository.py  test_test_result_repository.py  test_user_repository.py  test_vacancy_repository.py  test_vacancy_suggestion_repository.py  test_webhook_event_repository.py
backend/tests/integration/uow/: test_candidate_scoring_operation.py  test_decide_vacancy_suggestion_use_case.py  test_sqlalchemy_uow.py
backend/tests/unit/: conftest.py  test_assess_candidate_use_case.py  test_auth_use_cases.py  test_authenticate_user_use_case.py  test_candidate_crud_use_cases.py  test_candidate_repository_load_options.py  test_candidate_scorer.py  test_candidate_scoring_operation.py  test_candidate_use_cases.py  test_celery_tasks_logging.py  test_competency_graph_builder.py  test_create_user_use_case.py  test_create_vacancy_graph_use_case.py  test_decide_vacancy_suggestion_use_case.py  test_decide_vacancy_suggestions_use_case.py  test_extract_vacancy_graph_operation.py  test_finalize_vacancy_graph_use_case.py  test_get_candidate_profile_use_case.py  test_get_current_user_use_case.py  test_get_task_use_case.py  test_get_vacancy_graph_use_case.py  test_get_vacancy_ranking_use_case.py  test_graph_entity_resolver.py  test_health_endpoint.py  test_health_use_case.py  test_http_testing_system_gateway.py  test_issue_token_pair_use_case.py  test_list_tasks_use_case.py  test_list_users_use_case.py  test_list_vacancies_for_review_use_case.py  test_list_vacancies_use_case.py  test_list_vacancy_candidates_use_case.py  test_list_vacancy_suggestions_use_case.py  test_llm_code_assessment_operation.py  test_llm_dispatch.py  test_llm_gateway.py  test_llm_orchestrator.py  test_logout_use_case.py  test_map_task_to_competencies_operation.py  test_mapper_dump_to_orm.py  (+25 more)
backend/tests/unit/mappers/: __init__.py  conftest.py  test_candidate_auth_ingestion_to_orm.py  test_category_competency_to_orm.py  test_task_test_result_to_orm.py  test_vacancy_to_orm.py
(+209 files in other folders)
