[project]
name = "competency-system"
version = "0.1.0"
description = "AI Competency Assessment System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # LLM
    "openai>=1.52.0",
    "httpx>=0.27.0",
    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Auth
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    # Environment
    "python-dotenv>=1.0.0",
    # Airflow
    "apache-airflow>=2.11.0",
    "apache-airflow-providers-docker>=3.13.0",
    "docker>=7.1.0",
    # Utils
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "tenacity>=9.0.0",
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.12.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "ipython>=8.28.0",
    "rich>=13.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/competency_system"]
