[project]
name = "competency-system"
version = "0.1.0"
description = "AI Competency Assessment System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # LLM
    "openai>=1.52.0",
    "httpx>=0.27.0",
    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Auth
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    # Environment
    "python-dotenv>=1.0.0",
    # Airflow
    "apache-airflow>=2.11.0",
    "apache-airflow-providers-docker>=3.13.0",
    "docker>=7.1.0",
    # Utils
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "tenacity>=9.0.0",
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "ANN", "D", "S", "T20"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "B905",
    "N818",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "ANN", "D"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]

python_version = "3.12"
mypy_path = "src"
files = ["src"]

exclude = "tests/.*|build/.*|dist/.*|node_modules/.*|__pycache__/.*|venv/.*"

incremental = true
cache_dir = ".mypy_cache"

plugins = ["pydantic.mypy"]

strict = true
enable_error_code = ["possibly-undefined", "redundant-expr", "truthy-bool"]

warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true

disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true

ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
warn_redundant_casts = true
no_implicit_optional = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["competency_system.presentation.airflow.dags.*"]
disable_error_code = ["untyped-decorator"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --tb=short --strict-markers --cov=src --cov-report=term-missing --cov-fail-under=70"
xfail_strict = true
markers = [
    "unit: unit tests with mocked dependencies and no database access",
    "integration_repo: integration tests for persistence repositories and SQLAlchemyUnitOfWork on PostgreSQL",
    "contract: API and boundary contract tests",
    "optional_dep: tests that require optional dependencies",
]
